fixed css; scrollbars didn't appear any more

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,16 @@
 <style type="text/css" media="all">
+html, body
+{
+	width: 100%;
+	height: 100%;
+	margin: 0;			/* Remove body margin/padding */
+	padding: 0;
+	overflow: hidden;	/* Remove scroll bars on browser window */
+}
+#header { padding: 1em; }
 
 #ScoreDistributionPane {
-	overflow-x: visible;
+	overflow-x: hidden;
 	overflow-y: auto;
 }
 
